@@ -1,3 +1,8 @@
+libcaldav (0.5.2)
+  * Added a unit like testing framework
+
+-- Michael Rasmussen <mir@datanom.net>  Mon, 5 Apr 2010 12:15:03 +0100
+
 libcaldav (0.5.1)
   * Honor request 2981083. Implement a response_free function
   * Honor request 2981100. Implement a runtime_info creation function
